# mt_bench

./: .coverage  .coveragerc  .gitignore  CLI_EXAMPLES.md  INITIAL.md  README.md  activate-cuda.sh  activate-linux-cuda.sh  demo_cli.py  demo_cli.py~  install_cuda.sh  install_macos.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_colab.txt  requirements_no_flash.txt  run_tests.py  setup-uv.sh  sync-cuda.sh  sync-linux-cuda.sh  test_simple.sh
.claude/: settings.local.json
PRPs/: mt_bench_evaluation_system.md
configs/: evaluation_config.yaml  model_config.yaml
examples/: mtbench.py
notebooks/: mt_bench_demo.ipynb  mtbench_colab.ipynb
results/: mtbench_results_20250729_233629.csv  mtbench_results_20250729_233629.json  mtbench_results_20250729_234003.csv  mtbench_results_20250729_234003.json  mtbench_results_20250729_234404.json  mtbench_results_20250729_234540.csv  mtbench_results_20250729_234540.json  mtbench_summary_20250729_233629.txt  mtbench_summary_20250729_234540.txt
src/: __init__.py  cli.py
src/cli_parts/: __init__.py  common.py  output.py  parser.py
src/evaluation/: __init__.py  conversation_handler.py  generation_runtime.py  judge_client.py  mtbench_evaluator.py  multi_mode_evaluator.py  perplexity_evaluator.py  response_generation.py
src/models/: __init__.py  model_configs.py  model_manager.py  model_policies.py  model_queries.py  model_registry.py  model_types.py
src/runtime/: __init__.py  model_runtime.py
src/utils/: __init__.py  data_loader.py  memory_utils.py  response_manager.py  results_analyzer.py
tests/: __init__.py
tests/test_cli/: test_provider_routing.py
tests/test_evaluation/: test_judge_client_providers.py  test_multi_mode_evaluator.py  test_perplexity_evaluator.py
tests/test_models/: __init__.py  test_model_configs.py
tests/test_runtime/: test_model_runtime.py
tests/test_utils/: test_memory_utils.py
